move audio tooling to tools/audio @engineer124

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,7 +1,5 @@
 CFLAGS := -Wall -Wextra -pedantic -std=c99 -g -O2
-PROGRAMS := aifc_decode elf2rom makeromfs mkdmadata mkldscript reloc_prereq vtxdis yaz0
-CPPFLAGS := -Wall -Wextra -pedantic -std=c++17 -g -O2
-CPP_PROGRAMS := assemble_sequence
+PROGRAMS := elf2rom makeromfs mkdmadata mkldscript reloc_prereq vtxdis yaz0
 
 ifeq ($(shell command -v clang >/dev/null 2>&1; echo $$?),0)
   CC := clang
@@ -19,21 +17,21 @@ ifneq ($(LLD),0)
   CFLAGS += -fuse-ld=lld
 endif
 
-all: $(PROGRAMS) $(CPP_PROGRAMS)
+all: $(PROGRAMS)
 	$(MAKE) -C ZAPD
 	$(MAKE) -C fado
+	$(MAKE) -C audio
 
 clean:
 	$(RM) $(PROGRAMS) $(addsuffix .exe,$(PROGRAMS))
 	$(MAKE) -C ZAPD clean
 	$(MAKE) -C fado clean
+	$(MAKE) -C audio clean
 
 distclean: clean
 
 .PHONY: all clean distclean
 
-aifc_decode_SOURCES       := aifc_decode.c
-assemble_sequence_SOURCES := assemble_sequence.cpp
 elf2rom_SOURCES           := elf2rom.c elf32.c n64chksum.c util.c
 makeromfs_SOURCES         := makeromfs.c n64chksum.c util.c
 mkdmadata_SOURCES         := mkdmadata.c spec.c util.c
@@ -42,19 +40,9 @@ reloc_prereq_SOURCES      := reloc_prereq.c spec.c util.c
 vtxdis_SOURCES            := vtxdis.c
 yaz0_SOURCES              := yaz0tool.c yaz0.c util.c
 
-aifc_decode_LIBRARIES       := -lm
-assemble_sequence_LIBRARIES := -lstdc++ -lm
-
 define COMPILE =
 $(1): $($1_SOURCES)
 	$(CC) $(CFLAGS) -o $$@ $$^ $($1_LIBRARIES)
 endef
 
-define CPPCOMPILE =
-$(1): $($1_SOURCES)
-	$(CC) $(CPPFLAGS) -o $$@ $$^ $($1_LIBRARIES)
-endef
-
 $(foreach p,$(PROGRAMS),$(eval $(call COMPILE,$(p))))
-
-$(foreach p,$(CPP_PROGRAMS),$(eval $(call CPPCOMPILE,$(p))))
