--- a/tools/ZAPD/Jenkinsfile
+++ b/tools/ZAPD/Jenkinsfile
@@ -38,7 +38,7 @@ pipeline {
                 stage('Setup OOT') {
                     steps {
                         dir('oot') {
-                            sh 'cp /usr/local/etc/roms/baserom_oot.z64 baserom_original.z64'
+                            sh 'cp /usr/local/etc/roms/baserom_oot.z64 baserom.gc-eu-mq-dbg.z64'
 
                             // Identical to `make setup` except for copying our newer ZAPD.out into oot
                             sh 'git submodule update --init --recursive'
