--- a/tools/permuter_settings.toml
+++ b/tools/permuter_settings.toml
@@ -8,6 +8,14 @@ LOG = "void"
 SET_FULLSCREEN_VIEWPORT = "void"
 OPEN_DISPS = "void"
 CLOSE_DISPS = "void"
+GRAPH_ALLOC = "void*"
+LOG_UTILS_CHECK_NULL_POINTER = "void"
+PRINTF = "void"
+WORK_DISP = "void*"
+POLY_OPA_DISP = "void*"
+POLY_XLU_DISP = "void*"
+OVERLAY_DISP = "void*"
+"G_MTX_.*" = "int"
 ABS = "int"
 SQ = "int"
 CLAMP = "int"
