--- a/baseroms/ntsc-1.2/config.yml
+++ b/baseroms/ntsc-1.2/config.yml
@@ -1,5 +1,5 @@
-dmadata_start: 0x7170
-text_lang_pal: true
+dmadata_start: 0x7960
+text_lang_pal: false
 incbins:
   - name: ipl3
     segment: makerom
@@ -7,80 +7,79 @@ incbins:
     size: 0xFC0
   - name: rspbootText
     segment: boot
-    vram: 0x80005FC0
+    vram: 0x800065C0
     size: 0xD0
   - name: aspMainText
     segment: code
-    vram: 0x800E11A0
+    vram: 0x800E3600
     size: 0xFB0
   - name: gspS2DEX2d_fifoText
     segment: code
-    vram: 0x800E2150
+    vram: 0x800E45B0
     size: 0x18C0
   - name: njpgdspMainText
     segment: code
-    vram: 0x800E3A10
+    vram: 0x800E5E70
     size: 0xAF0
   - name: gSoundFontTable
     segment: code
-    vram: 0x80110470
+    vram: 0x80113DF0
     size: 0x270
   - name: gSequenceFontTable
     segment: code
-    vram: 0x801106E0
+    vram: 0x80114060
     size: 0x1C0
   - name: gSequenceTable
     segment: code
-    vram: 0x801108A0
+    vram: 0x80114220
     size: 0x6F0
   - name: gSampleBankTable
     segment: code
-    vram: 0x80110F90
+    vram: 0x80114910
     size: 0x80
   - name: aspMainData
     segment: code
-    vram: 0x80111010
+    vram: 0x80114990
     size: 0x2E0
   - name: gspF3DZEX2_NoN_PosLight_fifoText
     segment: code
-    vram: 0x801112F0
+    vram: 0x80114C70
     size: 0x1630
   - name: gspF3DZEX2_NoN_PosLight_fifoData
     segment: code
-    vram: 0x80112920
+    vram: 0x801162A0
     size: 0x420
   - name: gspS2DEX2d_fifoData
     segment: code
-    vram: 0x80112D40
+    vram: 0x801166C0
     size: 0x390
   - name: njpgdspMainData
     segment: code
-    vram: 0x801130D0
+    vram: 0x80116A50
     size: 0x60
 variables:
-  gMtxClear: 0x800FBC00
-  sNesMessageEntryTable: 0x801077F0
-  sGerMessageEntryTable: 0x8010BA18
-  sFraMessageEntryTable: 0x8010DB28
-  sStaffMessageEntryTable: 0x8010FC38
-  sShadowTex: 0x80A72FA0
-  gSoundFontTable: 0x80110470
-  gSequenceFontTable: 0x801106E0
-  gSequenceTable: 0x801108A0
-  gSampleBankTable: 0x80110F90
+  gMtxClear: 0x800FF3F0
+  sJpnMessageEntryTable: 0x8010AFFC
+  sNesMessageEntryTable: 0x8010F13C
+  sStaffMessageEntryTable: 0x8011335C
+  gSoundFontTable: 0x80113DF0
+  gSequenceFontTable: 0x80114060
+  gSequenceTable: 0x80114220
+  gSampleBankTable: 0x80114910
+  sShadowTex: 0x80AE0FE0
 assets:
 - name: code/fbdemo_circle
   xml_path: assets/xml/code/fbdemo_circle.xml
-  start_offset: 0xE90A8
-  end_offset: 0xEA2C8
+  start_offset: 0xEC0B8
+  end_offset: 0xED2D8
 - name: code/fbdemo_triforce
   xml_path: assets/xml/code/fbdemo_triforce.xml
-  start_offset: 0xE8530
-  end_offset: 0xE8600
+  start_offset: 0xEB540
+  end_offset: 0xEB610
 - name: code/fbdemo_wipe1
   xml_path: assets/xml/code/fbdemo_wipe1.xml
-  start_offset: 0xE8600
-  end_offset: 0xE8F90
+  start_offset: 0xEB610
+  end_offset: 0xEBFA0
 - name: misc/link_animetion
   xml_path: assets/xml/misc/link_animetion.xml
 - name: misc/z_select_static
@@ -90,7 +89,7 @@ assets:
 - name: objects/gameplay_field_keep
   xml_path: assets/xml/objects/gameplay_field_keep.xml
 - name: objects/gameplay_keep
-  xml_path: assets/xml/objects/gameplay_keep_pal.xml
+  xml_path: assets/xml/objects/gameplay_keep.xml
 - name: objects/object_ahg
   xml_path: assets/xml/objects/object_ahg.xml
 - name: objects/object_am
@@ -142,7 +141,7 @@ assets:
 - name: objects/object_bubble
   xml_path: assets/xml/objects/object_bubble.xml
 - name: objects/object_bv
-  xml_path: assets/xml/objects/object_bv_pal.xml
+  xml_path: assets/xml/objects/object_bv.xml
 - name: objects/object_bw
   xml_path: assets/xml/objects/object_bw.xml
 - name: objects/object_bwall
@@ -202,7 +201,7 @@ assets:
 - name: objects/object_ds2
   xml_path: assets/xml/objects/object_ds2.xml
 - name: objects/object_du
-  xml_path: assets/xml/objects/object_du_pal.xml
+  xml_path: assets/xml/objects/object_du.xml
 - name: objects/object_dy_obj
   xml_path: assets/xml/objects/object_dy_obj.xml
 - name: objects/object_ec
@@ -228,11 +227,11 @@ assets:
 - name: objects/object_fa
   xml_path: assets/xml/objects/object_fa.xml
 - name: objects/object_fd
-  xml_path: assets/xml/objects/object_fd_pal.xml
+  xml_path: assets/xml/objects/object_fd.xml
 - name: objects/object_fd2
   xml_path: assets/xml/objects/object_fd2.xml
 - name: objects/object_fhg
-  xml_path: assets/xml/objects/object_fhg_pal.xml
+  xml_path: assets/xml/objects/object_fhg.xml
 - name: objects/object_fire
   xml_path: assets/xml/objects/object_fire.xml
 - name: objects/object_firefly
@@ -248,9 +247,9 @@ assets:
 - name: objects/object_fz
   xml_path: assets/xml/objects/object_fz.xml
 - name: objects/object_ganon
-  xml_path: assets/xml/objects/object_ganon_pal.xml
+  xml_path: assets/xml/objects/object_ganon.xml
 - name: objects/object_ganon2
-  xml_path: assets/xml/objects/object_ganon2_pal.xml
+  xml_path: assets/xml/objects/object_ganon2.xml
 - name: objects/object_ganon_anime1
   xml_path: assets/xml/objects/object_ganon_anime1.xml
 - name: objects/object_ganon_anime2
@@ -438,7 +437,7 @@ assets:
 - name: objects/object_gol
   xml_path: assets/xml/objects/object_gol.xml
 - name: objects/object_goma
-  xml_path: assets/xml/objects/object_goma_pal.xml
+  xml_path: assets/xml/objects/object_goma.xml
 - name: objects/object_goroiwa
   xml_path: assets/xml/objects/object_goroiwa.xml
 - name: objects/object_gr
@@ -506,7 +505,7 @@ assets:
 - name: objects/object_kibako2
   xml_path: assets/xml/objects/object_kibako2.xml
 - name: objects/object_kingdodongo
-  xml_path: assets/xml/objects/object_kingdodongo_pal.xml
+  xml_path: assets/xml/objects/object_kingdodongo.xml
 - name: objects/object_km1
   xml_path: assets/xml/objects/object_km1.xml
 - name: objects/object_kusa
@@ -530,7 +529,7 @@ assets:
 - name: objects/object_ma2
   xml_path: assets/xml/objects/object_ma2.xml
 - name: objects/object_mag
-  xml_path: assets/xml/objects/object_mag_v3_mq.xml
+  xml_path: assets/xml/objects/object_mag.xml
 - name: objects/object_mamenoki
   xml_path: assets/xml/objects/object_mamenoki.xml
 - name: objects/object_mastergolon
@@ -574,7 +573,7 @@ assets:
 - name: objects/object_mm
   xml_path: assets/xml/objects/object_mm.xml
 - name: objects/object_mo
-  xml_path: assets/xml/objects/object_mo_pal.xml
+  xml_path: assets/xml/objects/object_mo.xml
 - name: objects/object_mori_hineri1
   xml_path: assets/xml/objects/object_mori_hineri1.xml
 - name: objects/object_mori_hineri1a
@@ -770,7 +769,7 @@ assets:
 - name: objects/object_ssh
   xml_path: assets/xml/objects/object_ssh.xml
 - name: objects/object_sst
-  xml_path: assets/xml/objects/object_sst_pal.xml
+  xml_path: assets/xml/objects/object_sst.xml
 - name: objects/object_st
   xml_path: assets/xml/objects/object_st.xml
 - name: objects/object_stream
@@ -804,7 +803,7 @@ assets:
 - name: objects/object_tsubo
   xml_path: assets/xml/objects/object_tsubo.xml
 - name: objects/object_tw
-  xml_path: assets/xml/objects/object_tw_pal.xml
+  xml_path: assets/xml/objects/object_tw.xml
 - name: objects/object_umajump
   xml_path: assets/xml/objects/object_umajump.xml
 - name: objects/object_vali
@@ -824,7 +823,7 @@ assets:
 - name: objects/object_wood02
   xml_path: assets/xml/objects/object_wood02.xml
 - name: objects/object_xc
-  xml_path: assets/xml/objects/object_xc_pal.xml
+  xml_path: assets/xml/objects/object_xc.xml
 - name: objects/object_yabusame_point
   xml_path: assets/xml/objects/object_yabusame_point.xml
 - name: objects/object_ydan_objects
@@ -849,40 +848,40 @@ assets:
   xml_path: assets/xml/objects/object_zo.xml
 - name: overlays/ovl_Arrow_Fire
   xml_path: assets/xml/overlays/ovl_Arrow_Fire.xml
-  start_offset: 0x980
-  end_offset: 0x1DA0
+  start_offset: 0x960
+  end_offset: 0x1D80
 - name: overlays/ovl_Arrow_Ice
   xml_path: assets/xml/overlays/ovl_Arrow_Ice.xml
-  start_offset: 0x9A0
-  end_offset: 0x1DC0
+  start_offset: 0x980
+  end_offset: 0x1DA0
 - name: overlays/ovl_Arrow_Light
   xml_path: assets/xml/overlays/ovl_Arrow_Light.xml
-  start_offset: 0x9B0
-  end_offset: 0x1DD0
+  start_offset: 0x990
+  end_offset: 0x1DB0
 - name: overlays/ovl_Bg_Ganon_Otyuka
   xml_path: assets/xml/overlays/ovl_Bg_Ganon_Otyuka.xml
-  start_offset: 0x1100
-  end_offset: 0x24DC
+  start_offset: 0x1110
+  end_offset: 0x24EC
 - name: overlays/ovl_Bg_Jya_Cobra
   xml_path: assets/xml/overlays/ovl_Bg_Jya_Cobra.xml
-  start_offset: 0x1850
-  end_offset: 0x18C8
+  start_offset: 0x1830
+  end_offset: 0x18A8
 - name: overlays/ovl_Boss_Dodongo
   xml_path: assets/xml/overlays/ovl_Boss_Dodongo.xml
-  start_offset: 0x61E8
-  end_offset: 0x91E8
+  start_offset: 0x61C8
+  end_offset: 0x91C8
 - name: overlays/ovl_Boss_Ganon
   xml_path: assets/xml/overlays/ovl_Boss_Ganon.xml
-  start_offset: 0xE3C8
-  end_offset: 0x20EE8
+  start_offset: 0xE388
+  end_offset: 0x20EA8
 - name: overlays/ovl_Boss_Ganon2
   xml_path: assets/xml/overlays/ovl_Boss_Ganon2.xml
-  start_offset: 0x9F88
-  end_offset: 0x10438
+  start_offset: 0x9F38
+  end_offset: 0x103E8
 - name: overlays/ovl_Boss_Sst
   xml_path: assets/xml/overlays/ovl_Boss_Sst.xml
-  start_offset: 0xA380
-  end_offset: 0xAD30
+  start_offset: 0xA370
+  end_offset: 0xAD20
 - name: overlays/ovl_Demo_Shd
   xml_path: assets/xml/overlays/ovl_Demo_Shd.xml
   start_offset: 0x410
@@ -901,28 +900,28 @@ assets:
   end_offset: 0x8900
 - name: overlays/ovl_En_Ganon_Mant
   xml_path: assets/xml/overlays/ovl_En_Ganon_Mant.xml
-  start_offset: 0x11F8
-  end_offset: 0x40F8
+  start_offset: 0x11E8
+  end_offset: 0x40E8
 - name: overlays/ovl_En_Ganon_Organ
   xml_path: assets/xml/overlays/ovl_En_Ganon_Organ.xml
-  start_offset: 0x368
-  end_offset: 0x6EF0
+  start_offset: 0x328
+  end_offset: 0x6EB0
 - name: overlays/ovl_En_Holl
   xml_path: assets/xml/overlays/ovl_En_Holl.xml
   start_offset: 0xE68
   end_offset: 0xED0
 - name: overlays/ovl_En_Jsjutan
   xml_path: assets/xml/overlays/ovl_En_Jsjutan.xml
-  start_offset: 0x12C8
-  end_offset: 0x4C60
+  start_offset: 0x12B8
+  end_offset: 0x4C50
 - name: overlays/ovl_En_Kanban
   xml_path: assets/xml/overlays/ovl_En_Kanban.xml
   start_offset: 0x2E70
   end_offset: 0x2F30
 - name: overlays/ovl_En_Sda
   xml_path: assets/xml/overlays/ovl_En_Sda.xml
-  start_offset: 0x1498
-  end_offset: 0x1528
+  start_offset: 0x14A8
+  end_offset: 0x1538
 - name: overlays/ovl_En_Ssh
   xml_path: assets/xml/overlays/ovl_En_Ssh.xml
   start_offset: 0x2150
@@ -933,24 +932,24 @@ assets:
   end_offset: 0x2730
 - name: overlays/ovl_En_Sth
   xml_path: assets/xml/overlays/ovl_En_Sth.xml
-  start_offset: 0xE70
-  end_offset: 0x3E44
+  start_offset: 0xE60
+  end_offset: 0x3E34
 - name: overlays/ovl_End_Title
   xml_path: assets/xml/overlays/ovl_End_Title.xml
-  start_offset: 0x6E0
-  end_offset: 0x4088
+  start_offset: 0x6F0
+  end_offset: 0x4098
 - name: overlays/ovl_file_choose
-  xml_path: assets/xml/overlays/ovl_file_choose_pal.xml
-  start_offset: 0xD740
-  end_offset: 0xE010
+  xml_path: assets/xml/overlays/ovl_file_choose.xml
+  start_offset: 0xEC50
+  end_offset: 0xF330
 - name: overlays/ovl_Magic_Dark
   xml_path: assets/xml/overlays/ovl_Magic_Dark.xml
   start_offset: 0xC90
   end_offset: 0x16C0
 - name: overlays/ovl_Magic_Fire
   xml_path: assets/xml/overlays/ovl_Magic_Fire.xml
-  start_offset: 0xB50
-  end_offset: 0x21A0
+  start_offset: 0xB20
+  end_offset: 0x2170
 - name: overlays/ovl_Magic_Wind
   xml_path: assets/xml/overlays/ovl_Magic_Wind.xml
   start_offset: 0x6A0
@@ -961,12 +960,12 @@ assets:
   end_offset: 0xE58
 - name: overlays/ovl_Oceff_Storm
   xml_path: assets/xml/overlays/ovl_Oceff_Storm.xml
-  start_offset: 0x750
-  end_offset: 0x1AE0
+  start_offset: 0x740
+  end_offset: 0x1AD0
 - name: overlays/ovl_Oceff_Wipe
   xml_path: assets/xml/overlays/ovl_Oceff_Wipe.xml
-  start_offset: 0x520
-  end_offset: 0xCE0
+  start_offset: 0x4F0
+  end_offset: 0xCB0
 - name: overlays/ovl_Oceff_Wipe2
   xml_path: assets/xml/overlays/ovl_Oceff_Wipe2.xml
   start_offset: 0x430
@@ -980,13 +979,13 @@ assets:
   start_offset: 0x410
   end_offset: 0xEF8
 - name: scenes/dungeons/bdan
-  xml_path: assets/xml/scenes/dungeons/bdan_mq.xml
+  xml_path: assets/xml/scenes/dungeons/bdan.xml
 - name: scenes/dungeons/bdan_boss
   xml_path: assets/xml/scenes/dungeons/bdan_boss.xml
 - name: scenes/dungeons/Bmori1
-  xml_path: assets/xml/scenes/dungeons/Bmori1_mq.xml
+  xml_path: assets/xml/scenes/dungeons/Bmori1.xml
 - name: scenes/dungeons/ddan
-  xml_path: assets/xml/scenes/dungeons/ddan_mq.xml
+  xml_path: assets/xml/scenes/dungeons/ddan.xml
 - name: scenes/dungeons/ddan_boss
   xml_path: assets/xml/scenes/dungeons/ddan_boss.xml
 - name: scenes/dungeons/FIRE_bs
@@ -1002,35 +1001,35 @@ assets:
 - name: scenes/dungeons/ganon_sonogo
   xml_path: assets/xml/scenes/dungeons/ganon_sonogo.xml
 - name: scenes/dungeons/ganontika
-  xml_path: assets/xml/scenes/dungeons/ganontika_mq.xml
+  xml_path: assets/xml/scenes/dungeons/ganontika.xml
 - name: scenes/dungeons/ganontikasonogo
   xml_path: assets/xml/scenes/dungeons/ganontikasonogo.xml
 - name: scenes/dungeons/gerudoway
   xml_path: assets/xml/scenes/dungeons/gerudoway.xml
 - name: scenes/dungeons/HAKAdan
-  xml_path: assets/xml/scenes/dungeons/HAKAdan_mq.xml
+  xml_path: assets/xml/scenes/dungeons/HAKAdan.xml
 - name: scenes/dungeons/HAKAdan_bs
   xml_path: assets/xml/scenes/dungeons/HAKAdan_bs.xml
 - name: scenes/dungeons/HAKAdanCH
-  xml_path: assets/xml/scenes/dungeons/HAKAdanCH_mq.xml
+  xml_path: assets/xml/scenes/dungeons/HAKAdanCH.xml
 - name: scenes/dungeons/HIDAN
-  xml_path: assets/xml/scenes/dungeons/HIDAN_mq.xml
+  xml_path: assets/xml/scenes/dungeons/HIDAN.xml
 - name: scenes/dungeons/ice_doukutu
-  xml_path: assets/xml/scenes/dungeons/ice_doukutu_mq.xml
+  xml_path: assets/xml/scenes/dungeons/ice_doukutu.xml
 - name: scenes/dungeons/jyasinboss
   xml_path: assets/xml/scenes/dungeons/jyasinboss.xml
 - name: scenes/dungeons/jyasinzou
-  xml_path: assets/xml/scenes/dungeons/jyasinzou_mq.xml
+  xml_path: assets/xml/scenes/dungeons/jyasinzou.xml
 - name: scenes/dungeons/men
-  xml_path: assets/xml/scenes/dungeons/men_mq.xml
+  xml_path: assets/xml/scenes/dungeons/men.xml
 - name: scenes/dungeons/MIZUsin
-  xml_path: assets/xml/scenes/dungeons/MIZUsin_mq.xml
+  xml_path: assets/xml/scenes/dungeons/MIZUsin.xml
 - name: scenes/dungeons/MIZUsin_bs
   xml_path: assets/xml/scenes/dungeons/MIZUsin_bs.xml
 - name: scenes/dungeons/moribossroom
   xml_path: assets/xml/scenes/dungeons/moribossroom.xml
 - name: scenes/dungeons/ydan
-  xml_path: assets/xml/scenes/dungeons/ydan_mq.xml
+  xml_path: assets/xml/scenes/dungeons/ydan.xml
 - name: scenes/dungeons/ydan_boss
   xml_path: assets/xml/scenes/dungeons/ydan_boss.xml
 - name: scenes/indoors/bowling
@@ -1164,7 +1163,7 @@ assets:
 - name: scenes/overworld/spot18
   xml_path: assets/xml/scenes/overworld/spot18.xml
 - name: scenes/overworld/spot20
-  xml_path: assets/xml/scenes/overworld/spot20_pal.xml
+  xml_path: assets/xml/scenes/overworld/spot20.xml
 - name: scenes/shops/alley_shop
   xml_path: assets/xml/scenes/shops/alley_shop.xml
 - name: scenes/shops/drag
@@ -1184,25 +1183,25 @@ assets:
 - name: textures/backgrounds
   xml_path: assets/xml/textures/backgrounds.xml
 - name: textures/do_action_static
-  xml_path: assets/xml/textures/do_action_static_pal.xml
+  xml_path: assets/xml/textures/do_action_static.xml
 - name: textures/icon_item_24_static
   xml_path: assets/xml/textures/icon_item_24_static.xml
 - name: textures/icon_item_dungeon_static
   xml_path: assets/xml/textures/icon_item_dungeon_static.xml
 - name: textures/icon_item_field_static
   xml_path: assets/xml/textures/icon_item_field_static.xml
-- name: textures/icon_item_fra_static
-  xml_path: assets/xml/textures/icon_item_fra_static.xml
 - name: textures/icon_item_gameover_static
-  xml_path: assets/xml/textures/icon_item_gameover_static_pal.xml
-- name: textures/icon_item_ger_static
-  xml_path: assets/xml/textures/icon_item_ger_static.xml
+  xml_path: assets/xml/textures/icon_item_gameover_static.xml
+- name: textures/icon_item_jpn_static
+  xml_path: assets/xml/textures/icon_item_jpn_static.xml
 - name: textures/icon_item_nes_static
   xml_path: assets/xml/textures/icon_item_nes_static.xml
 - name: textures/icon_item_static
-  xml_path: assets/xml/textures/icon_item_static_pal.xml
+  xml_path: assets/xml/textures/icon_item_static.xml
 - name: textures/item_name_static
-  xml_path: assets/xml/textures/item_name_static_pal.xml
+  xml_path: assets/xml/textures/item_name_static.xml
+- name: textures/kanji
+  xml_path: assets/xml/textures/kanji.xml
 - name: textures/map_48x85_static
   xml_path: assets/xml/textures/map_48x85_static.xml
 - name: textures/map_grand_static
@@ -1210,20 +1209,20 @@ assets:
 - name: textures/map_i_static
   xml_path: assets/xml/textures/map_i_static.xml
 - name: textures/map_name_static
-  xml_path: assets/xml/textures/map_name_static_pal.xml
+  xml_path: assets/xml/textures/map_name_static.xml
 - name: textures/message_static
   xml_path: assets/xml/textures/message_static.xml
 - name: textures/message_texture_static
   xml_path: assets/xml/textures/message_texture_static.xml
 - name: textures/nes_font_static
-  xml_path: assets/xml/textures/nes_font_static_v2.xml
+  xml_path: assets/xml/textures/nes_font_static.xml
 - name: textures/nintendo_rogo_static
   xml_path: assets/xml/textures/nintendo_rogo_static.xml
 - name: textures/parameter_static
   xml_path: assets/xml/textures/parameter_static.xml
 - name: textures/place_title_cards
-  xml_path: assets/xml/textures/place_title_cards_pal.xml
+  xml_path: assets/xml/textures/place_title_cards.xml
 - name: textures/skyboxes
   xml_path: assets/xml/textures/skyboxes.xml
 - name: textures/title_static
-  xml_path: assets/xml/textures/title_static_pal.xml
+  xml_path: assets/xml/textures/title_static.xml
