--- a/baseroms/gc-eu-mq/config.yml
+++ b/baseroms/gc-eu-mq/config.yml
@@ -64,6 +64,10 @@ variables:
   sFraMessageEntryTable: 0x8010DB28
   sStaffMessageEntryTable: 0x8010FC38
   sShadowTex: 0x80A72FA0
+  gSoundFontTable: 0x80110470
+  gSequenceFontTable: 0x801106E0
+  gSequenceTable: 0x801108A0
+  gSampleBankTable: 0x80110F90
 assets:
 - name: code/fbdemo_circle
   xml_path: assets/xml/code/fbdemo_circle.xml
