--- a/baseroms/gc-us/config.yml
+++ b/baseroms/gc-us/config.yml
@@ -63,6 +63,10 @@ variables:
   sNesMessageEntryTable: 0x8010DFCC
   sStaffMessageEntryTable: 0x801121EC
   sShadowTex: 0x80A74130
+  gSoundFontTable: 0x80112C80
+  gSequenceFontTable: 0x80112EF0
+  gSequenceTable: 0x801130B0
+  gSampleBankTable: 0x801137A0
 assets:
 - name: code/fbdemo_circle
   xml_path: assets/xml/code/fbdemo_circle.xml
